--- a/static/index.html
+++ b/static/index.html
@@ -14,166 +14,141 @@
         --muted: #6b6b76;
         --accent: #2563eb;
       }
-
-      * {
-        box-sizing: border-box;
-      }
-
+      * { box-sizing: border-box; }
       body {
         font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-        margin: 0;
-        padding: 2rem;
-        background: var(--bg);
-        color: var(--text);
+        margin: 0; padding: 2rem; background: var(--bg); color: var(--text);
       }
-
-      h1,
-      h2 {
-        margin: 0 0 0.5rem;
-      }
-
-      p {
-        margin-top: 0;
-        color: var(--muted);
-      }
-
-      main {
-        max-width: 960px;
-        margin: 0 auto;
-        display: grid;
-        gap: 1.5rem;
-      }
-
+      h1, h2 { margin: 0 0 0.5rem; }
+      p { margin-top: 0; color: var(--muted); }
+      main { max-width: 960px; margin: 0 auto; display: grid; gap: 1.5rem; }
       section {
-        background: var(--card);
-        border: 1px solid var(--border);
-        border-radius: 14px;
-        padding: 1.5rem;
-        box-shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
+        background: var(--card); border: 1px solid var(--border); border-radius: 14px;
+        padding: 1.5rem; box-shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
       }
-
-      textarea,
-      input[type="text"] {
-        width: 100%;
-        font: inherit;
-        padding: 0.85rem 1rem;
-        border-radius: 10px;
-        border: 1px solid var(--border);
-        background: #fff;
-        color: var(--text);
-        resize: vertical;
+      textarea, input[type="text"] {
+        width: 100%; font: inherit; padding: 0.85rem 1rem; border-radius: 10px;
+        border: 1px solid var(--border); background: #fff; color: var(--text); resize: vertical;
       }
-
-      textarea {
-        min-height: 140px;
-      }
-
+      textarea { min-height: 140px; }
       button {
-        appearance: none;
-        border: none;
-        border-radius: 999px;
-        padding: 0.75rem 1.5rem;
-        font-weight: 600;
-        font-size: 0.95rem;
-        cursor: pointer;
-        background: var(--accent);
-        color: white;
+        appearance: none; border: none; border-radius: 999px; padding: 0.75rem 1.5rem;
+        font-weight: 600; font-size: 0.95rem; cursor: pointer; background: var(--accent); color: white;
         transition: transform 120ms ease, box-shadow 120ms ease;
       }
-
-      button:hover {
-        transform: translateY(-1px);
-        box-shadow: 0 10px 20px rgba(37, 99, 235, 0.25);
-      }
-
-      button:disabled {
-        opacity: 0.6;
-        cursor: not-allowed;
-        box-shadow: none;
-      }
-
-      .stack {
-        display: flex;
-        gap: 0.75rem;
-        flex-wrap: wrap;
-        align-items: center;
-        margin-top: 1rem;
-      }
-
+      button:hover { transform: translateY(-1px); box-shadow: 0 10px 20px rgba(37, 99, 235, 0.25); }
+      button:disabled { opacity: 0.6; cursor: not-allowed; box-shadow: none; }
+      .stack { display: flex; gap: 0.75rem; flex-wrap: wrap; align-items: center; margin-top: 1rem; }
       .output {
-        margin-top: 1rem;
-        padding: 1rem;
-        background: #0f172a;
-        color: #e2e8f0;
-        border-radius: 10px;
-        min-height: 100px;
-        overflow-y: auto;
-        white-space: pre-wrap;
+        margin-top: 1rem; padding: 1rem; background: #0f172a; color: #e2e8f0; border-radius: 10px;
+        min-height: 100px; overflow-y: auto; white-space: pre-wrap;
       }
-
-      .status {
+      .status { font-size: 0.9rem; color: var(--muted); }
+      .muted { color: var(--muted); font-size: 0.9rem; }
+      header.appbar {
+        display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;
+      }
+      .id-badge {
+        display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.4rem 0.75rem;
+        background: #eef2ff; color: #1e293b; border-radius: 999px; border: 1px solid var(--border);
         font-size: 0.9rem;
-        color: var(--muted);
       }
-
-      @media (max-width: 640px) {
-        body {
-          padding: 1rem;
-        }
-
-        button {
-          width: 100%;
-        }
+      .danger {
+        background: #fee2e2; color: #7f1d1d; border-color: #fecaca;
       }
+      footer { text-align: center; color: var(--muted); font-size: 0.9rem; }
+      @media (max-width: 640px) { body { padding: 1rem; } button { width: 100%; } }
     </style>
   </head>
   <body>
     <main>
-      <header>
-        <h1>🧠 RAG Playground</h1>
-        <p>Load documents into Pinecone, then ask streaming questions backed by retrieved context.</p>
+      <header class="appbar" aria-label="Application header">
+        <div>
+          <h1>🧠 RAG Playground</h1>
+          <p class="muted">Load documents into Pinecone, then ask streaming questions backed by retrieved context.</p>
+        </div>
+        <div class="stack">
+          <span id="workspace-chip" class="id-badge" title="Per-user workspace ID">Workspace: …</span>
+          <button id="reset-btn" class="danger" title="Clear local workspace">Reset Workspace</button>
+        </div>
       </header>
 
-      <section id="upload-card">
+      <section id="upload-card" aria-label="Ingest Text">
         <h2>1. Ingest Text</h2>
-        <p>Paste arbitrary text and send it to the `/upsert` endpoint. The server chunks and stores it in Pinecone.</p>
-        <textarea id="doc-input" placeholder="Paste your reference material here..."></textarea>
+        <p>Paste arbitrary text and send it to the <code>/upsert</code> endpoint. The server chunks and stores it in your per-user Pinecone namespace.</p>
+        <textarea id="doc-input" placeholder="Paste your reference material here…"></textarea>
         <div class="stack">
           <button id="upload-btn">Send to /upsert</button>
           <span id="upload-status" class="status"></span>
         </div>
       </section>
 
-      <section id="query-card">
+      <section id="query-card" aria-label="Retrieve Context">
         <h2>2. Retrieve Context (optional)</h2>
-        <p>Hit `/query` to see the nearest chunks the RAG service would use. Helpful when debugging ingest quality.</p>
+        <p>Hit <code>/query</code> to see the nearest chunks this RAG service would use. Helpful when debugging ingest quality.</p>
         <input id="query-input" type="text" placeholder="Enter a search query" />
         <div class="stack">
           <button id="query-btn">Query Pinecone</button>
           <span id="query-status" class="status"></span>
         </div>
-        <div id="query-output" class="output"></div>
+        <div id="query-output" class="output" role="log" aria-live="polite"></div>
       </section>
 
-      <section id="ask-card">
+      <section id="ask-card" aria-label="Ask with Streaming">
         <h2>3. Ask with Streaming</h2>
-        <p>Submit a question to `/ask-context-stream`. Tokens stream in as they are generated.</p>
+        <p>Submit a question to <code>/ask-context-stream</code>. Tokens stream in as they are generated.</p>
         <input id="ask-input" type="text" placeholder="e.g., Summarize the main causes and outcomes of the Rift Wars." />
         <div class="stack">
           <button id="ask-btn">Ask</button>
           <span id="ask-status" class="status"></span>
         </div>
-        <div id="ask-output" class="output"></div>
+        <div id="ask-output" class="output" role="log" aria-live="polite"></div>
       </section>
+
+      <footer>
+        <p>Per-user isolation is handled via a persisted <code>localStorage</code> UUID sent as <code>X-User-ID</code> with each request.</p>
+      </footer>
     </main>
 
     <script>
+      // ------- API base selection -------
       const DEFAULT_API_BASE =
         window.location.port === "5500"
           ? "http://127.0.0.1:8000"
           : window.location.origin;
       const API_BASE = window.API_BASE || DEFAULT_API_BASE;
 
+      // ------- Stable per-browser Workspace ID (localStorage) -------
+      function ensureUserID() {
+        let userID = localStorage.getItem("rag_user_id");
+        if (!userID) {
+          userID = (crypto && crypto.randomUUID) ? crypto.randomUUID() : String(Date.now()) + "-" + Math.random().toString(16).slice(2);
+          localStorage.setItem("rag_user_id", userID);
+        }
+        return userID;
+      }
+      let USER_ID = ensureUserID();
+
+      // Small helper to fetch /whoami (confirms namespace & shows a short badge)
+      async function refreshWorkspaceBadge() {
+        try {
+          const resp = await fetch(`${API_BASE}/whoami`, {
+            headers: { "X-User-ID": USER_ID }
+          });
+          if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
+          const json = await resp.json();
+          const chip = document.getElementById("workspace-chip");
+          chip.textContent = `Workspace: ${json.display_id}`;
+          chip.title = `Namespace: ${json.namespace}`;
+        } catch (err) {
+          // Fallback if backend not reachable yet
+          const chip = document.getElementById("workspace-chip");
+          chip.textContent = "Workspace: (pending)";
+          chip.title = "Namespace unavailable";
+        }
+      }
+
+      // ------- UI elements -------
       const docInput = document.getElementById("doc-input");
       const uploadBtn = document.getElementById("upload-btn");
       const uploadStatus = document.getElementById("upload-status");
@@ -188,13 +163,18 @@
       const askStatus = document.getElementById("ask-status");
       const askOutput = document.getElementById("ask-output");
 
+      const resetBtn = document.getElementById("reset-btn");
+
+      // ------- Common POST helper with per-user header -------
       async function postPlain(path, body) {
         const resp = await fetch(`${API_BASE}${path}`, {
           method: "POST",
-          headers: { "Content-Type": "text/plain" },
+          headers: {
+            "Content-Type": "text/plain",
+            "X-User-ID": USER_ID,
+          },
           body,
         });
-
         if (!resp.ok) {
           const detail = await resp.text();
           throw new Error(`HTTP ${resp.status} – ${detail}`);
@@ -202,6 +182,27 @@
         return resp;
       }
 
+      // Also need a GET helper that sends the header (for /query?query=)
+      async function getWithHeaders(path) {
+        const resp = await fetch(`${API_BASE}${path}`, {
+          headers: { "X-User-ID": USER_ID },
+        });
+        if (!resp.ok) {
+          const detail = await resp.text();
+          throw new Error(`HTTP ${resp.status} – ${detail}`);
+        }
+        return resp;
+      }
+
+      // ------- Reset workspace (clears localStorage id, reloads page) -------
+      resetBtn.addEventListener("click", () => {
+        if (confirm("Resetting will create a new empty workspace ID on reload. Continue?")) {
+          localStorage.removeItem("rag_user_id");
+          location.reload();
+        }
+      });
+
+      // ------- Upload flow -------
       uploadBtn.addEventListener("click", async () => {
         const payload = docInput.value.trim();
         if (!payload) {
@@ -214,7 +215,8 @@
         try {
           const resp = await postPlain("/upsert", payload);
           const json = await resp.json();
-          uploadStatus.textContent = `Stored ${json.chunks_uploaded} chunks.`;
+          const nsShort = (json.namespace || "").replace("user-", "").slice(0, 8);
+          uploadStatus.textContent = `Stored ${json.chunks_uploaded} chunks in workspace ${nsShort}.`;
         } catch (err) {
           uploadStatus.textContent = `Failed: ${err.message}`;
         } finally {
@@ -222,6 +224,7 @@
         }
       });
 
+      // ------- Query flow (use GET so it’s easy to reproduce in browser) -------
       queryBtn.addEventListener("click", async () => {
         const query = queryInput.value.trim();
         if (!query) {
@@ -233,7 +236,7 @@
         queryBtn.disabled = true;
 
         try {
-          const resp = await postPlain("/query", query);
+          const resp = await getWithHeaders(`/query?query=${encodeURIComponent(query)}`);
           const results = await resp.json();
           queryOutput.textContent = results.join("\n\n---\n\n");
           queryStatus.textContent = `Returned ${results.length} snippet(s).`;
@@ -244,6 +247,7 @@
         }
       });
 
+      // ------- Ask flow (streaming) -------
       askBtn.addEventListener("click", async () => {
         const question = askInput.value.trim();
         if (!question) {
@@ -256,7 +260,15 @@
         askBtn.disabled = true;
 
         try {
-          const response = await postPlain("/ask-context-stream", question);
+          const response = await fetch(`${API_BASE}/ask-context-stream`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "text/plain",
+              "X-User-ID": USER_ID,
+            },
+            body: question,
+          });
+
           if (!response.body || !response.body.getReader) {
             throw new Error("Streaming unsupported in this browser.");
           }
@@ -275,6 +287,9 @@
           askBtn.disabled = false;
         }
       });
+
+      // Initialize badge on load
+      refreshWorkspaceBadge();
     </script>
   </body>
 </html>
