Change frontend titles to ContextMate

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>RAG Playground</title>
+    <title>ContextMate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       :root {
@@ -64,7 +64,7 @@
     <main>
       <header class="appbar" aria-label="Application header">
         <div>
-          <h1>🧠 RAG Playground</h1>
+          <h1>ContextMate</h1>
           <p class="muted">Load documents into Pinecone, then ask streaming questions backed by retrieved context.</p>
         </div>
         <div class="stack">
